samples/_failures_safe/1761660609_633e16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4ced67c.c: In function ‘main’:
./samples/SAFE/__tmp_c4ced67c.c:143:16: error: missing terminating " character
  143 |         printf("4
      |                ^~
./samples/SAFE/__tmp_c4ced67c.c:143:9: error: expected expression at end of input
  143 |         printf("4
      |         ^~~~~~
./samples/SAFE/__tmp_c4ced67c.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c4ced67c.c:143:9: error: expected declaration or statement at end of input
